[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-client = "0.19.0"
anchor-lang = "0.19.0"
solana-client = "1.9.2"
solana-sdk = "1.9.2"
solana-account-decoder = "1.9.2"
base64 = "0.12.3"
spl-token = "3.2"
spl-associated-token-account = "1.0.3"
thiserror = "1.0"
anyhow = "1.0"
clearing-house = { path = "../programs/clearing_house", features = ["no-entrypoint"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]

