[package]
name = "drift-sdk"
version = "0.1.0"
edition = "2018"
autotests = false

[workspace]
members = []

[lib]
crate-type = ["cdylib", "lib"]

[features]
mainnet-beta=["clearing-house/mainnet-beta"] # feature to get the correct program id

[dependencies]
anchor-client = "0.19.0"
anchor-lang = "0.19.0"
solana-client = "1.9.2"
solana-sdk = "1.9.2"
solana-account-decoder = "1.9.2"
base64 = "0.12.3"
spl-token = "3.2"
spl-associated-token-account = "1.0.3"
thiserror = "1.0"
shellexpand = "2.1.0"
clearing-house = { path = "../programs/clearing_house", features = ["no-entrypoint"] }

[dev-dependencies]
lazy_static = "1.4.0"

[[test]]
name = "clearing_house_test"
path = "integration_test/clearing_house_test.rs"
harness = false